--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <form name ="user">
+        <div>
+        <input type="text" placeholder="name" name="name"/>
+    </div>
+    <div>
+        <input type="number" placeholder="age" name="age"/>
+    </div>
+        <button type="submit">save</button>
+    </form>
+
     <div class="usersBlock">
         
     </div>
